Middleware now works well, needs further testing with RM